# brownie-repo

./: Makefile  README.md  brownie-config.yml  docker-compose.yml  pyproject.toml  pytest.ini
contracts/: FundMe.sol
core/: settings.py
scripts/: constants.py  utils.py
scripts/fund_me/: demo.py  deploy.py  fund_and_withdraw.py
scripts/simple_storage/: deploy.py  read_value.py
tests/: conftest.py  test_fund_me.py  test_simple_storage.py
